r300/compiler: Don't erase sources when converting RGB->Alpha

https://bugs.freedesktop.org/show_bug.cgi?id=34030

NOTE: This is a candidate for the 7.10 branch.